<resources>
    <string name="app_name" translatable="false">Sakina</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="get_started" translatable="false">Get Started</string>
    <string name="what_s_your_name" translatable="false">what\'s your name</string>
    <string name="join_us" translatable="false">Join Us!</string>
    <string name="register_with_us" translatable="false">Register with us!</string>
    <string name="your_information_is_safe_with_us" translatable="false">Your information is safe with us</string>
    <string name="enter_your_name" translatable="false">enter your name</string>
    <string name="enter_your_email" translatable="false">enter your email</string>
    <string name="enter_your_password" translatable="false">enter your password</string>
    <string name="already_have_an_account" translatable="false">Already have an account?</string>
    <string name="log_in" translatable="false">log in</string>
    <string name="sakina_intro" translatable="false">your dedicated health companion powered by advanced AI , I\'m here to help you take control of your health.</string>
    <string name="welcome_i_m_sakina" translatable="false">Welcome, I\'m \nSakina</string>
    <string name="disease_diagnoses_with_sakina" translatable="false">Disease diagnoses with \nSakina</string>
    <string name="sakina_analysis_desc" translatable="false">I can analyze your symptoms and provide accurate disease diagnoses. Just describe how you\'re feeling</string>
    <string name="stay_on_track_with_medications" translatable="false">Stay on Track with \nMedications</string>
    <string name="sakina_med_desc" translatable="false">I will keep track of your prescribed drugs and remind you when it\'s time to take them. Say goodbye to missed doses and hello to a healthier you!</string>
    <string name="your_health_journey_all_in_one_place" translatable="false">Your Health Journey, All in One Place</string>
    <string name="sakina_med_history_desc" translatable="false">I can also Track your symptoms, store medical information, and build a comprehensive medical history for you.</string>
    <string name="sign_up" translatable="false">Sign up</string>
    <string name="welcome_back" translatable="false">Welcome back!</string>
    <string name="login" translatable="false">Login</string>
    <string name="don_t_have_an_account" translatable="false">Don\'t have an account?</string>
    <string name="profile" translatable="false">Profile</string>
    <string name="home" translatable="false">Home</string>
    <string name="settings" translatable="false">Settings</string>
    <string name="welcome" translatable="false">Welcome,</string>
    <string name="diagnosis" translatable="false">Diagnosis</string>
    <string name="do_you_have_anything_worrying_you" translatable="false">Do you have anything \nworrying you?</string>
    <string name="skin_diagnosis" translatable="false">Skin Diagnosis</string>
    <string name="heart_diagnosis" translatable="false">Heart Diagnosis</string>
    <string name="today_s_health_tip" translatable="false">Today\'s health tip</string>
    <string name="find_sakina" translatable="false">Find Sakina</string>
    <string name="diagnose" translatable="false">Diagnose</string>
    <string name="diagnose_your_heart" translatable="false">Diagnose your heart by adding an audio \nof heartbeat recording</string>
    <string name="sakina" translatable="false">Sakina</string>
    <string name="today" translatable="false">Today</string>
    <string name="how_are_you_feeling" translatable="false">How are You feeling?</string>
    <string name="hypertension_question" translatable="false">Have Your ever been diagnosed with Hypertension ?</string>
    <string name="hypotension_question" translatable="false">Have Your ever been diagnosed with Hypotension ?</string>
    <string name="medical_information" translatable="false">Medical information</string>
    <string name="yes" translatable="false">Yes</string>
    <string name="no" translatable="false">No</string>
    <string name="do_you_have_diabetes" translatable="false">Do you have diabetes ?</string>
    <string name="are_you_smoker" translatable="false">Are you smoker ?</string>
    <string name="personal_information" translatable="false">Personal Information</string>
    <string name="save" translatable="false">Save</string>
    <string name="height" translatable="false">Height</string>
    <string name="weight" translatable="false">Weight</string>
    <string name="age" translatable="false">Age</string>
    <string name="diagnostic_history" translatable="false">Diagnostic history</string>
    <string name="account" translatable="false">Account</string>
    <string name="name" translatable="false">Name</string>
    <string name="password" translatable="false">Password</string>
    <string name="change_name" translatable="false">Change name</string>
    <string name="confirm" translatable="false">Confirm</string>
    <string name="first_name" translatable="false">First name</string>
    <string name="last_name" translatable="false">Last name</string>
    <string name="change_password" translatable="false">Change password</string>
    <string name="to_set_a_new_password" translatable="false">To set a new password, please enter \nyour current password</string>
    <string name="current_password" translatable="false">Current password</string>
    <string name="new_password" translatable="false">New password</string>
    <string name="language">Language</string>
    <string name="theme">Theme</string>
    <string name="contact_us">Contact us</string>
    <string name="log_out">Log out</string>

    <string-array name="language_options">
        <item>English</item>
        <item>Spanish</item>
        <item>French</item>
        <item>Italiano</item>
        <item>Arabic</item>
    </string-array>

    <string-array name="language_codes">
        <item>en</item>
        <item>fr</item>
        <item>es</item>
    </string-array>
    <string name="title_activity_settings_view" translatable="false">SettingsViewActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header" translatable="false">Messages</string>
    <string name="sync_header" translatable="false">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title" translatable="false">Your signature</string>
    <string name="reply_title" translatable="false">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title" translatable="false">Sync email periodically</string>
    <string name="attachment_title" translatable="false">Download incoming attachments</string>
    <string name="attachment_summary_on" translatable="false">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off" translatable="false">Only download attachments when manually requested</string>

    <string name="dose_reminder">Dose reminder</string>
    <string name="add_medicine">Add medicine</string>
    <string name="medicine_name">Medicine name</string>
    <string name="dosage">Dosage</string>
    <string name="daily">Daily</string>
    <string name="time">Time</string>
    <string name="add_time">Add Time</string>
    <string name="reminders">Reminders</string>
    <string name="details">Details</string>
    <string name="taken">Taken</string>
    <string name="skipped">Skipped</string>
    <string name="medicine">Medicine</string>
    <string name="last_time_updated">Last time updated :</string>

</resources>