<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/windowBackground"
    tools:context=".feature_account.presentation.ui.MedicalInfoFragment">

    <ImageView
        android:id="@+id/btnBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:src="@drawable/left_arrow"
        app:tint="@color/mainTextColor"
        app:layout_constraintStart_toStartOf="@id/gl_start"
        app:layout_constraintTop_toTopOf="parent"
        android:importantForAccessibility="no" />

    <TextView
        android:id="@+id/txtMedicalInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dim_head_text_margin_start"
        android:text="@string/medical_information"
        android:textColor="@color/mainTextColor"
        android:textSize="@dimen/dim_head_text"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/btnBack"
        app:layout_constraintStart_toEndOf="@id/btnBack"
        app:layout_constraintTop_toTopOf="@id/btnBack" />


    <TextView
        android:id="@+id/txtQuestionHypertension"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:text="@string/hypertension_question"
        app:layout_constraintEnd_toEndOf="@id/gl_end"
        app:layout_constraintStart_toStartOf="@id/gl_start"
        app:layout_constraintTop_toBottomOf="@id/txtMedicalInfo" />


    <com.google.android.material.button.MaterialButtonToggleGroup
        android:id="@+id/toggleHypertension"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:backgroundTint="@drawable/toggle_selector"
        app:layout_constraintEnd_toEndOf="@id/gl_end"
        app:layout_constraintStart_toStartOf="@id/gl_start"
        app:layout_constraintTop_toBottomOf="@id/txtQuestionHypertension"
        app:selectionRequired="true"
        app:singleSelection="true">

        <Button
            android:id="@+id/hypertensionTrue"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/yes" />

        <Button
            android:id="@+id/hypertensionFalse"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/no" />

    </com.google.android.material.button.MaterialButtonToggleGroup>


    <TextView
        android:id="@+id/txtQuestionHypotension"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/hypotension_question"
        app:layout_constraintEnd_toEndOf="@id/gl_end"
        app:layout_constraintStart_toStartOf="@id/gl_start"
        app:layout_constraintTop_toBottomOf="@id/toggleHypertension" />


    <com.google.android.material.button.MaterialButtonToggleGroup
        android:id="@+id/toggleHypotension"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:backgroundTint="@drawable/toggle_selector"
        app:layout_constraintEnd_toEndOf="@id/gl_end"
        app:layout_constraintStart_toStartOf="@id/gl_start"
        app:layout_constraintTop_toBottomOf="@id/txtQuestionHypotension"
        app:selectionRequired="true"
        app:singleSelection="true">

        <Button
            android:id="@+id/hypotensionTrue"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/yes" />

        <Button
            android:id="@+id/hypotensionFalse"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/no" />

    </com.google.android.material.button.MaterialButtonToggleGroup>


    <TextView
        android:id="@+id/txtQuestionDiabetes"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/do_you_have_diabetes"
        app:layout_constraintEnd_toEndOf="@id/gl_end"
        app:layout_constraintStart_toStartOf="@id/gl_start"
        app:layout_constraintTop_toBottomOf="@id/toggleHypotension" />


    <com.google.android.material.button.MaterialButtonToggleGroup
        android:id="@+id/toggleDiabetes"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:backgroundTint="@drawable/toggle_selector"
        app:layout_constraintEnd_toEndOf="@id/gl_end"
        app:layout_constraintStart_toStartOf="@id/gl_start"
        app:layout_constraintTop_toBottomOf="@id/txtQuestionDiabetes"
        app:selectionRequired="true"
        app:singleSelection="true">

        <Button
            android:id="@+id/diabetesTrue"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/yes" />

        <Button
            android:id="@+id/diabetesFalse"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/no" />

    </com.google.android.material.button.MaterialButtonToggleGroup>


    <TextView
        android:id="@+id/txtQuestionSmoker"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/are_you_smoker"
        app:layout_constraintEnd_toEndOf="@id/gl_end"
        app:layout_constraintStart_toStartOf="@id/gl_start"
        app:layout_constraintTop_toBottomOf="@id/toggleDiabetes" />


    <com.google.android.material.button.MaterialButtonToggleGroup
        android:id="@+id/toggleSmoker"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:backgroundTint="@drawable/toggle_selector"
        app:layout_constraintEnd_toEndOf="@id/gl_end"
        app:layout_constraintStart_toStartOf="@id/gl_start"
        app:layout_constraintTop_toBottomOf="@id/txtQuestionSmoker"
        app:selectionRequired="true"
        app:singleSelection="true">

        <Button
            android:id="@+id/smokerTrue"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/yes" />

        <Button
            android:id="@+id/smokerFalse"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/no" />

    </com.google.android.material.button.MaterialButtonToggleGroup>


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/margin_hor" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/margin_hor" />

</androidx.constraintlayout.widget.ConstraintLayout>