<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".feature_medicine.presentation.ui.AddMedicineFragment">

    <ImageView
        android:id="@+id/btnBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="24dp"
        android:src="@drawable/left_arrow"
        app:layout_constraintStart_toStartOf="@id/glStart"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtAddMedicine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="21dp"
        android:text="@string/add_medicine"
        android:textColor="@color/black"
        android:textSize="23sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/btnBack"
        app:layout_constraintTop_toTopOf="parent" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/loMedicineName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        app:layout_constraintEnd_toEndOf="@id/glEnd"
        app:layout_constraintStart_toStartOf="@id/glStart"
        app:layout_constraintTop_toBottomOf="@id/txtAddMedicine">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtMedicineName"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/medicine_name"
            android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/loDosage"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="@id/glEnd"
        app:layout_constraintStart_toStartOf="@id/glStart"
        app:layout_constraintTop_toBottomOf="@id/loMedicineName"
        app:suffixText="@string/daily">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtDosage"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/dosage"
            android:inputType="numberDecimal" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/txtReminders"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/reminders"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/glStart"
        app:layout_constraintTop_toBottomOf="@id/loDosage" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/loTime1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="@id/glEnd"
        app:layout_constraintStart_toStartOf="@id/glStart"
        app:layout_constraintTop_toBottomOf="@id/txtReminders">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtTime1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:focusableInTouchMode="false"
            android:hint="time1"
            android:inputType="none" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/loTime2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:visibility="gone"
        app:endIconDrawable="@drawable/ic_delete"
        app:endIconMode="custom"
        app:layout_constraintEnd_toEndOf="@id/glEnd"
        app:layout_constraintStart_toStartOf="@id/glStart"
        app:layout_constraintTop_toBottomOf="@id/loTime1">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtTime2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="time2"
            android:focusableInTouchMode="false"
            android:inputType="none" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/loTime3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:visibility="gone"
        app:endIconDrawable="@drawable/ic_delete"
        app:endIconMode="custom"
        app:layout_constraintEnd_toEndOf="@id/glEnd"
        app:layout_constraintStart_toStartOf="@id/glStart"
        app:layout_constraintTop_toBottomOf="@id/loTime2">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtTime3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="time3"
            android:focusableInTouchMode="false"
            android:inputType="none" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/loTime4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:visibility="gone"
        app:endIconDrawable="@drawable/ic_delete"
        app:endIconMode="custom"
        app:layout_constraintEnd_toEndOf="@id/glEnd"
        app:layout_constraintStart_toStartOf="@id/glStart"
        app:layout_constraintTop_toBottomOf="@id/loTime3">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtTime4"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="time4"
            android:focusableInTouchMode="false"
            android:inputType="none" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/loTime5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:visibility="gone"
        app:endIconDrawable="@drawable/ic_delete"
        app:endIconMode="custom"
        app:layout_constraintEnd_toEndOf="@id/glEnd"
        app:layout_constraintStart_toStartOf="@id/glStart"
        app:layout_constraintTop_toBottomOf="@id/loTime4">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtTime5"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="time5"
            android:focusableInTouchMode="false"
            android:inputType="none" />

    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/btnAddTime"
        style="@style/Widget.Material3.Button.ElevatedButton.Icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/add_time"
        app:icon="@drawable/ic_add"
        app:layout_constraintStart_toStartOf="@id/glStart"
        app:layout_constraintTop_toBottomOf="@id/loTime5" />


    <RadioGroup
        android:id="@+id/rgImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@id/glEnd"
        app:layout_constraintTop_toBottomOf="@id/loTime5">

        <!-- First Radio Button -->
        <RadioButton
            android:id="@+id/rb_pill1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:checked="true"
            android:drawableStart="@drawable/ic_pill_1" />

        <RadioButton
            android:id="@+id/rb_pill2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_pill_2" />

    </RadioGroup>

    <Button
        android:id="@+id/btnConfirm"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="48dp"
        android:paddingVertical="8dp"
        android:text="@string/confirm"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/glEnd"
        app:layout_constraintStart_toStartOf="@id/glStart" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="16dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="16dp" />

</androidx.constraintlayout.widget.ConstraintLayout>